deploy/k8s/api-gateway/base/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  labels:
    app.kubernetes.io/name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
